--- a/test/dummy/app/assets/tailwind/application.css
+++ b/test/dummy/app/assets/tailwind/application.css
@@ -9,8 +9,11 @@
 /* Include the engine's views in the Tailwind build */
 @source "../../../../../app/views/**/*.erb";
 
-/* MakeupArtist gem views - auto-added by generator */
-@source "/usr/local/bundle/ruby/3.3.0/bundler/gems/makeup-artist-fc1684bc2772/app/views/**/*.erb";
+/* Flatpack gem views - auto-added by generator */
+@source "/usr/local/bundle/ruby/3.3.0/bundler/gems/flatpack-*/app/views/**/*.erb";
 
-/* MakeupArtist theme variables - required for component styling */
-@import "../../../config/makeup_artist/ui_theme.css";
+/* Flatpack components (Ruby + templates) */
+@source "/usr/local/bundle/ruby/3.3.0/bundler/gems/flatpack-*/app/components/**/*.{rb,erb,haml,html,slim}";
+
+/* Flatpack theme variables - required for component styling */
+@import "../../../config/flatpack/ui_theme.css";
